gap with variable, fix screen elements height

--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
 
 }
 #app {
+   --gap: 0.5rem;
    display: grid;
    grid-auto-rows: auto auto;
    width: max-content;
-   gap: 0.5rem;
+   gap: var(--gap);
    background: darkolivegreen;
    padding: 1rem;
    border-radius: 0.5rem;
@@ -23,6 +24,10 @@ body {
 
 .display {
    background-color: goldenrod;
+   padding: 1rem;
+}
+.display > p {
+   height: 1rem;
 }
 .display__input {
    text-align: left;
@@ -34,19 +39,19 @@ body {
 .buttons {
    display: flex;
    flex-direction: row;
-   gap: 0.5rem;
+   gap: var(--gap);
 }
 .buttons__numbers {
    display: grid;
    grid-template-columns: repeat(3, 3rem);
    grid-auto-rows: 2rem;
-   gap: 0.5rem;
+   gap: var(--gap);
 }
 .buttons__operators {
    display: grid;
    grid-template-columns: repeat(2, 3rem);
    grid-auto-rows: 2rem;
-   gap: 0.5rem;
+   gap: var(--gap);
 }
 .wide {
    grid-column: span 2;
